# message_scraper

./: Cargo.toml  discord_conversations_20250206_215726.json  discord_conversations_20250206_220250.json
src/: lib.rs  main.rs
src/display/: mod.rs  ui.rs
src/models/: channel.rs  conversation.rs  mod.rs  stats.rs
src/processing/: channel.rs  mod.rs  thread.rs
src/utils/: file.rs  mod.rs  selection.rs
