[package]
name = "message_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { git = "https://github.com/Sanae6/serenity-scope", branch = "current", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = { version = "0.27", features = ["windows"] }
colorful = { version = "0.3.2", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1  # Better compile times, still decent performance

# Remove debug info from release build
[profile.release.package."*"]
debug = false
strip = true

